--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
+    "@reduxjs/toolkit": "^1.8.4",
     "expo": "~46.0.6",
     "expo-barcode-scanner": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "native-base": "^3.4.12",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-svg": "12.3.0",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
